--- a/text.html
+++ b/text.html
@@ -199,7 +199,7 @@ body {
 			<h1><img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" />초대합니다.<img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" /></h1>▼협회 네이버카페▼
 		</div>
 		<div class="contact_wrap">
-			<a href="https://cafe.naver.com/sngnmuaythai" class="bg3">카페이동</a>
+			<a href="https://cafe.naver.com/sngnmuaythai" class="bg3"></a>
 		</div>
 		<div class="date_wrap">
 			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />일시 : <strong>2019년 06월 22일 토요일 오후 1시</strong></span>
