--- a/text.html
+++ b/text.html
@@ -196,7 +196,7 @@ body {
 			</div>
 		</div>
 		<div class="content_wrap">
-			<h1><img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" />초대합니다.<img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" /></h1>▼ 네이버카페 ▼
+			<h1><img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" />초대합니다<img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" /></h1>▼ 네이버카페 ▼
 		</div>
 		<div class="contact_wrap">
 			<a href="https://cafe.naver.com/sngnmuaythai" class="bg3">  &nbsp; 신청 &nbsp; </a>
