--- a/text.html
+++ b/text.html
@@ -11,7 +11,7 @@
 <meta property="og:image" content="https://user-images.githubusercontent.com/50893303/58217849-9227bc00-7d3f-11e9-92bc-34abebbe7e0d.jpg />
 <meta property="og:image" content="https://user-images.githubusercontent.com/50893303/58217851-9358e900-7d3f-11e9-974a-7cbcb362b958.jpg" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="rmsidtest.github.io" />
+<meta property="og:url" content="yellyB.github.io" />
 
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.css"/>
 <style>
