--- a/TBinvite.html
+++ b/TBinvite.html
@@ -8,7 +8,7 @@
 <meta property="og:site_name" content="invite" />
 <meta property="og:title" content="초청장" />
 <meta property="og:description" content="2019년 6월 22일 오후 1시, 성수초등학교" />
-<meta property="og:image" content="https://user-images.githubusercontent.com/50893303/58217849-9227bc00-7d3f-11e9-92bc-34abebbe7e0d.jpg />
+<meta property="og:image" content="https://user-images.githubusercontent.com/50893303/58294762-ca460200-7e06-11e9-9a22-0ba70d093d2e.png />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="yellyB.github.io" />
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.css"/>
@@ -43,7 +43,7 @@ body {
 	overflow:hidden;
 }
 .content_wrap {
-	font-size: 14px;
+	font-size: 17px;
 	text-align: center;
 	padding-top: 15px;
 	margin: 0 15px;
@@ -95,7 +95,7 @@ body {
 	margin: 0 15px;
 	padding: 20px 0 0 0;
 	text-align: left;
-	font-size: 13px;
+	font-size: 15px;
 }
 .date_wrap img {
 	height: 15px;
@@ -164,18 +164,21 @@ body {
 		<div class="slide_wrap">
 			<div id="autoplay" style="display:none;">
 				<!-- //이미지 추가 -->
-				<img src="https://user-images.githubusercontent.com/50893303/58217849-9227bc00-7d3f-11e9-92bc-34abebbe7e0d.jpg" class="img100" />
-				<img src="https://user-images.githubusercontent.com/50893303/58217851-9358e900-7d3f-11e9-974a-7cbcb362b958.jpg" class="img100" />
+				<img src="https://user-images.githubusercontent.com/50893303/58294762-ca460200-7e06-11e9-9a22-0ba70d093d2e.png" class="img100" />
+				<img src="https://user-images.githubusercontent.com/50893303/58294766-cb772f00-7e06-11e9-99d2-ad47033b0c34.png" class="img100" />
+				<img src="https://user-images.githubusercontent.com/50893303/58294770-cd40f280-7e06-11e9-805f-2fd0bbd8dcc8.png" class="img100" />
 		</div>
 		</div>
 		<div class="content_wrap">
-			<h1><img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" />초대합니다<img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" /></h1>▼ 네이버카페 ▼
+			<h1><img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" />초대합니다<img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" /></h1>▼ 성남시무에타이협회 ▼
+			<br>접수마감 6월 7일 금요일
 		</div>
 		<div class="contact_wrap">
-			<a href="https://cafe.naver.com/sngnmuaythai" class="bg3">  &nbsp; 신청 &nbsp; </a>
+			<a href="https://cafe.naver.com/sngnmuaythai" class="bg3">  &nbsp; 출전신청하기! &nbsp; </a>
 		</div>
 		<div class="date_wrap">
-			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />일시 : <strong>2019년 06월 22일 토요일 오후 1시</strong></span>
+			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />일시 : <strong>2019년 06월 22일 토요일 오후 1시 <개회식></strong></span>
+			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />일정 : <strong>오전 10시 시합시작</strong></span>
 		</div>
 		<div class="addr_wrap">
 			<span><img src="https://cdn4.iconfinder.com/data/icons/miu/24/house-home-real_estate-property-glyph-128.png" alt="place" />장소 : <strong>성수초등학교</strong> | 경기도 성남시 수정구 모란로 11</span>
