--- a/TBinvite.html
+++ b/TBinvite.html
@@ -43,7 +43,16 @@ body {
 	overflow:hidden;
 }
 .content_wrap {
-	font-size: 17px;
+	font-size: 16px;
+	text-align: center;
+	padding-top: 15px;
+	margin: 0 15px;
+	color: #8d968c;
+	line-height: 20px;
+}
+												   
+#limit {
+	font-size: 14px;
 	text-align: center;
 	padding-top: 15px;
 	margin: 0 15px;
@@ -51,7 +60,7 @@ body {
 	line-height: 20px;
 }
 .content_wrap h1 {
-	font-size: 15px;
+	font-size: 18px;
 	font-weight: bold;
 	text-align: center;
 	padding-bottom: 15px;
@@ -171,14 +180,15 @@ body {
 		</div>
 		<div class="content_wrap">
 			<h1><img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" />초대합니다<img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" /></h1>▼ 성남시무에타이협회 ▼
-			<br>접수마감 6월 7일 금요일
+			
 		</div>
 		<div class="contact_wrap">
 			<a href="https://cafe.naver.com/sngnmuaythai" class="bg3">  &nbsp; 출전신청하기! &nbsp; </a>
 		</div>
+						<div id="limit><br>(접수마감 6월 7일 금요일)<div>
 		<div class="date_wrap">
-			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />일시 : <strong>2019년 06월 22일 토요일 오후 1시 <개회식></strong></span>
-			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />일정 : <strong>오전 10시 시합시작</strong></span>
+			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />일시 : <strong>06월 22일 토요일 오후 1시 <개회식></strong></span>
+			<img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />&nbsp; - 오전 10시 시합시작 <br>&nbsp; - 오후 1시 개회식
 		</div>
 		<div class="addr_wrap">
 			<span><img src="https://cdn4.iconfinder.com/data/icons/miu/24/house-home-real_estate-property-glyph-128.png" alt="place" />장소 : <strong>성수초등학교</strong> | 경기도 성남시 수정구 모란로 11</span>
