--- a/TBinvite.html
+++ b/TBinvite.html
@@ -188,7 +188,7 @@ body {
 						<div id="limit><br>(접수마감 6월 7일 금요일)<div>
 		<div class="date_wrap">
 			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />일시 : <strong>06월 22일 토요일 오후 1시 <개회식></strong></span>
-			<img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />&nbsp; - 오전 10시 시합시작 <br>&nbsp; - 오후 1시 개회식
+			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" /> - 오전 10시 시합시작 - 오후 1시 개회식</span>
 		</div>
 		<div class="addr_wrap">
 			<span><img src="https://cdn4.iconfinder.com/data/icons/miu/24/house-home-real_estate-property-glyph-128.png" alt="place" />장소 : <strong>성수초등학교</strong> | 경기도 성남시 수정구 모란로 11</span>
