--- a/TBinvite.html
+++ b/TBinvite.html
@@ -51,7 +51,7 @@ body {
 	line-height: 20px;
 }
 												   
-#limit {
+.limit {
 	font-size: 14px;
 	text-align: center;
 	padding-top: 15px;
@@ -185,7 +185,7 @@ body {
 		<div class="contact_wrap">
 			<a href="https://cafe.naver.com/sngnmuaythai" class="bg3">  &nbsp; 출전신청하기! &nbsp; </a>
 		</div>
-						<div id="limit><br>(접수마감 6월 7일 금요일)<div>
+						<div class="limit"><br>(접수마감 6월 7일 금요일)<div>
 		<div class="date_wrap">
 			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />일시 : <strong>06월 22일 토요일 오후 1시 <개회식></strong></span>
 			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" /> - 오전 10시 시합시작 - 오후 1시 개회식</span>
