--- a/TBinvite.html
+++ b/TBinvite.html
@@ -105,6 +105,7 @@ body {
 	padding: 20px 0 0 0;
 	text-align: left;
 	font-size: 15px;
+	color: black;
 }
 .date_wrap img {
 	height: 15px;
@@ -117,7 +118,8 @@ body {
 	margin: 0 15px;
 	padding: 10px 0;
 	text-align: left;
-	font-size: 13px;
+	font-size: 15px;
+	color: black;
 }
 .addr_wrap img {
 	height: 15px;
@@ -185,7 +187,7 @@ body {
 		<div class="contact_wrap">
 			<a href="https://cafe.naver.com/sngnmuaythai" class="bg3">  &nbsp; 출전신청하기! &nbsp; </a>
 		</div>
-						<div class="limit"><br>(접수마감 6월 7일 금요일)<div>
+						<div class="limit">(접수마감 6월 7일 금요일)<div>
 		<div class="date_wrap">
 			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />일시 : <strong>06월 22일 토요일 오후 1시 <개회식></strong></span>
 			<br>&nbsp; - 오전 10시 시합시작<br>&nbsp; - 오후 1시 개회식
