--- a/TBinvite.html
+++ b/TBinvite.html
@@ -104,7 +104,7 @@ body {
 	margin: 0 15px;
 	padding: 20px 0 0 0;
 	text-align: left;
-	font-size: 15px;
+	font-size: 13px;
 	color: black;
 }
 .date_wrap img {
@@ -118,7 +118,7 @@ body {
 	margin: 0 15px;
 	padding: 10px 0;
 	text-align: left;
-	font-size: 15px;
+	font-size: 13px;
 	color: black;
 }
 .addr_wrap img {
@@ -190,7 +190,7 @@ body {
 						<div class="limit">(접수마감 6월 7일 금요일)<div>
 		<div class="date_wrap">
 			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />일시 : <strong>06월 22일 토요일 오후 1시 <개회식></strong></span>
-			<br>&nbsp; - 오전 10시 시합시작<br>&nbsp; - 오후 1시 개회식
+			<br>&nbsp;&nbsp;&nbsp; - 오전 10시 시합시작<br>&nbsp;&nbsp;&nbsp; - 오후 1시 개회식
 		</div>
 		<div class="addr_wrap">
 			<span><img src="https://cdn4.iconfinder.com/data/icons/miu/24/house-home-real_estate-property-glyph-128.png" alt="place" />장소 : <strong>성수초등학교</strong> | 경기도 성남시 수정구 모란로 11</span>
