--- a/TBinvite.html
+++ b/TBinvite.html
@@ -56,7 +56,7 @@ body {
 	text-align: center;
 	padding-top: 15px;
 	margin: 0 15px;
-	color: #8d968c;
+	color: #ff9966;
 	line-height: 20px;
 }
 .content_wrap h1 {
