--- a/TBinvite.html
+++ b/TBinvite.html
@@ -60,11 +60,11 @@ body {
 	line-height: 20px;
 }
 .content_wrap h1 {
-	font-size: 18px;
+	font-size: 22px;
 	font-weight: bold;
 	text-align: center;
 	padding-bottom: 15px;
-	color: #50a27f;
+	color: #0a8a8a;
 }
 .content_wrap h1 img {
 	height: 40px;
@@ -104,7 +104,7 @@ body {
 	margin: 0 15px;
 	padding: 20px 0 0 0;
 	text-align: left;
-	font-size: 13px;
+	font-size: 14px;
 	color: black;
 }
 .date_wrap img {
@@ -118,7 +118,7 @@ body {
 	margin: 0 15px;
 	padding: 10px 0;
 	text-align: left;
-	font-size: 13px;
+	font-size: 14px;
 	color: black;
 }
 .addr_wrap img {
