--- a/TBinvite.html
+++ b/TBinvite.html
@@ -104,8 +104,15 @@ body {
 	margin: 0 15px;
 	padding: 20px 0 0 0;
 	text-align: left;
-	font-size: 14px;
+	font-size: 15px;
 	color: black;
+}
+.date_wrap2 {
+	margin: 0 15px;
+	padding: 20px 0 0 0;
+	text-align: left;
+	font-size: 14px;
+	color: #4c4c4c;
 }
 .date_wrap img {
 	height: 15px;
@@ -118,8 +125,15 @@ body {
 	margin: 0 15px;
 	padding: 10px 0;
 	text-align: left;
-	font-size: 14px;
+	font-size: 15px;
 	color: black;
+}
+.addr_wrap2 {
+	margin: 0 15px;
+	padding: 10px 0;
+	text-align: left;
+	font-size: 14px;
+	color: #4c4c4c;
 }
 .addr_wrap img {
 	height: 15px;
@@ -190,10 +204,11 @@ body {
 						<div class="limit">(접수마감 6월 7일 금요일)<div>
 		<div class="date_wrap">
 			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />일시 : <strong>06월 22일 토요일 오후 1시 <개회식></strong></span>
+			</div><div class="date_wrap2">
 			<span><br>          - 오전 10시 시합시작<br>          - 오후 1시 개회식</span>
 		</div>
 		<div class="addr_wrap">
-			<span><img src="https://cdn4.iconfinder.com/data/icons/miu/24/house-home-real_estate-property-glyph-128.png" alt="place" />장소 : <strong>성수초등학교</strong><br>         | 경기도 성남시 수정구 모란로 11</span>
+			<span><img src="https://cdn4.iconfinder.com/data/icons/miu/24/house-home-real_estate-property-glyph-128.png" alt="place" />장소 : <strong>성수초등학교</strong></div><div class="date_wrap2"><br>         | 경기도 성남시 수정구 모란로 11</span>
 		</div>
 		<div class="map_wrap" id="map"></div>
 		
