--- a/TBinvite.html
+++ b/TBinvite.html
@@ -108,8 +108,7 @@ body {
 	color: black;
 }
 .date_wrap2 {
-	margin: 0 15px;
-	padding: 20px 0 0 0;
+	
 	text-align: left;
 	font-size: 14px;
 	color: #4c4c4c;
@@ -129,8 +128,7 @@ body {
 	color: black;
 }
 .addr_wrap2 {
-	margin: 0 15px;
-	padding: 10px 0;
+	
 	text-align: left;
 	font-size: 14px;
 	color: #4c4c4c;
@@ -195,20 +193,21 @@ body {
 		</div>
 		</div>
 		<div class="content_wrap">
-			<h1><img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" />초대합니다<img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" /></h1>▼ 성남시무에타이협회 ▼
+			<br><br><h1><img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" />초대합니다<img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" />
+			<br><br></h1>▼ 성남시무에타이협회 ▼
 			
 		</div>
 		<div class="contact_wrap">
 			<a href="https://cafe.naver.com/sngnmuaythai" class="bg3">  &nbsp; 출전신청하기! &nbsp; </a>
 		</div>
-						<div class="limit">(접수마감 6월 7일 금요일)<div>
+						<div class="limit">(접수마감 6월 7일 금요일)<div><br><br>
 		<div class="date_wrap">
 			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" />일시 : <strong>06월 22일 토요일 오후 1시 <개회식></strong></span>
 			</div><div class="date_wrap2">
-			<span><br>          - 오전 10시 시합시작<br>          - 오후 1시 개회식</span>
+			<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 오전 10시 시합시작<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 오후 1시 개회식
 		</div>
 		<div class="addr_wrap">
-			<span><img src="https://cdn4.iconfinder.com/data/icons/miu/24/house-home-real_estate-property-glyph-128.png" alt="place" />장소 : <strong>성수초등학교</strong></div><div class="date_wrap2"><br>         | 경기도 성남시 수정구 모란로 11</span>
+			<span><img src="https://cdn4.iconfinder.com/data/icons/miu/24/house-home-real_estate-property-glyph-128.png" alt="place" />장소 : <strong>성수초등학교</strong></div><div class="date_wrap2"><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| 경기도 성남시 수정구 모란로 11</span>
 		</div>
 		<div class="map_wrap" id="map"></div>
 		
