--- a/TBinvite.html
+++ b/TBinvite.html
@@ -197,11 +197,12 @@ body {
 						<div class="limit">(접수마감 6월 7일 금요일)<div><br><br>
 		<div class="date_wrap">
 			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" /><strong>일시 : 06월 22일 토요일 오후 1시 <개회식></strong></span>
-			</div><div class="date_wrap2">
+			</div><span class="date_wrap2">
 			<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 오전 10시 시합시작<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 오후 1시 개회식
-		</div>
+		</span>
+						      <br><br>
 		<div class="addr_wrap">
-			<span><img src="https://cdn4.iconfinder.com/data/icons/miu/24/house-home-real_estate-property-glyph-128.png" alt="place" /></span><span class="date_wrap2"><strong>장소 : 성수초등학교</strong><br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| 경기도 성남시 수정구 모란로 11</span>
+			<span><img src="https://cdn4.iconfinder.com/data/icons/miu/24/house-home-real_estate-property-glyph-128.png" alt="place" /><strong>장소 : 성수초등학교</strong><br></span><span class="date_wrap2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| 경기도 성남시 수정구 모란로 11</span>
 		</div>
 		<div class="map_wrap" id="map"></div>
 		
