--- a/TBinvite.html
+++ b/TBinvite.html
@@ -187,8 +187,8 @@ body {
 		</div>
 		</div>
 		<div class="content_wrap">
-			<br><br><h1><img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" />초대합니다<img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" />
-			<br><br></h1>▼ 성남시무에타이협회 ▼
+			<br><br><h1><img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" />&nbsp;초대합니다&nbsp;<img src="https://cdn0.iconfinder.com/data/icons/kameleon-free-pack/110/Party-Poppers-128.png" alt="icon finder free icon" />
+			<br></h1>▼ 성남시무에타이협회 ▼
 			
 		</div>
 		<div class="contact_wrap">
@@ -196,10 +196,10 @@ body {
 		</div>
 						<div class="limit">(접수마감 6월 7일 금요일)<div><br><br>
 		<div class="date_wrap">
-			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" /><strong>일시 : 06월 22일 토요일 오후 1시 <개회식></strong></span>
-			</div><span class="date_wrap2">
-			<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 오전 10시 시합시작<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 오후 1시 개회식
-		</span>
+			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" /><strong>일시 : 06월 22일 토요일 오후 1시 <개회식></strong><br></span>
+			<span class="date_wrap2">
+			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 오전 10시 시합시작<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 오후 1시 개회식
+		</span></div>
 						      <br><br>
 		<div class="addr_wrap">
 			<span><img src="https://cdn4.iconfinder.com/data/icons/miu/24/house-home-real_estate-property-glyph-128.png" alt="place" /><strong>장소 : 성수초등학교</strong><br></span><span class="date_wrap2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| 경기도 성남시 수정구 모란로 11</span>
