--- a/TBinvite.html
+++ b/TBinvite.html
@@ -194,16 +194,19 @@ body {
 		<div class="contact_wrap">
 			<a href="https://cafe.naver.com/sngnmuaythai" class="bg3">  &nbsp; 출전신청하기! &nbsp; </a>
 		</div>
-						<div class="limit">(접수마감 6월 7일 금요일)<div><br><br>
+						<div class="limit">(접수마감 6월 7일 금요일)<div>
+								
 		<div class="date_wrap">
+				      <br><br><br>-----------------------------------------------------
 			<span><img src="https://cdn2.iconfinder.com/data/icons/office-38/24/office-40-128.png" alt="time" /><strong>일시 : 06월 22일 토요일 오후 1시 <개회식></strong><br></span>
 			<span class="date_wrap2">
 			&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 오전 10시 시합시작<br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- 오후 1시 개회식
 		</span></div>
-						      <br><br>
+						    
 		<div class="addr_wrap">
 			<span><img src="https://cdn4.iconfinder.com/data/icons/miu/24/house-home-real_estate-property-glyph-128.png" alt="place" /><strong>장소 : 성수초등학교</strong><br></span><span class="date_wrap2">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;| 경기도 성남시 수정구 모란로 11</span>
 		</div>
+		<br><br>
 		<div class="map_wrap" id="map"></div>
 		
 		<div class="copy">
