--- a/TBinvite.html
+++ b/TBinvite.html
@@ -91,7 +91,7 @@ body {
 	background-color: #9bddbe;
 }
 .contact_wrap a.bg3 {
-	background-color: #005766;
+	background-color: #88cccc;
 }
 .contact_wrap img {
 	height: 15px;
