--- a/TBinvite.html
+++ b/TBinvite.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=yes" />
 
 <meta property="og:site_name" content="invite" />
-<meta property="og:title" content="초청장" />
-<meta property="og:description" content="2019년 6월 22일 오후 1시, 성수초등학교" />
+<meta property="og:title" content="성남무에타이 협회 대회 초청장" />
+<meta property="og:description" content="2019년 6월 22일 오후 1시 <개회식>, 성수초등학교" />
 <meta property="og:image" content="https://user-images.githubusercontent.com/50893303/58294762-ca460200-7e06-11e9-9a22-0ba70d093d2e.png />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="yellyB.github.io" />
