--- a/TBinvite.html
+++ b/TBinvite.html
@@ -141,6 +141,14 @@ body {
 	text-align: center;
 	font-size: 14px;
 }
+.map_info{
+	font-size: 14px;
+	text-align: center;
+	padding-top: 15px;
+	margin: 0 15px;
+	color: #ff9966;
+	line-height: 20px;										   
+}
 .tras_wrap {
 	margin: 0 15px;
 	font-size: 14px;
@@ -209,6 +217,7 @@ body {
 		</div>
 		<br>
 		<div class="map_wrap" id="map"></div>
+		<div class="map_info">지도 로드 실패 시 "확인" 클릭</div>
 		
 		<div class="copy">
 			ⓒ Copyright 2019 BOM
