--- a/TBinvite.html
+++ b/TBinvite.html
@@ -222,7 +222,7 @@ body {
 		<br><br>
 						     
 		<div class="copy">
-			ⓒ Copyright 2019 BOM
+			ⓒ Copyright 2019 yelly
 		</div>
 				 <br>
 	</div>
