--- a/text1.html
+++ b/text1.html
@@ -64,7 +64,7 @@ body {
 	font-weight: bold;
 	text-align: center;
 	padding-bottom: 15px;
-	color: #db7093;
+	color: #333399;
 }
 .content_wrap h1 img {
 	height: 40px;
@@ -91,7 +91,7 @@ body {
 	background-color: #9bddbe;
 }
 .contact_wrap a.bg3 {
-	background-color: #e9967a;
+	background-color: #9999ff;
 }
 .contact_wrap img {
 	height: 15px;
