--- a/text.html
+++ b/text.html
@@ -91,7 +91,7 @@ body {
 	background-color: #9bddbe;
 }
 .contact_wrap a.bg3 {
-	background-color: #fa8072;
+	background-color: #bdb76b;
 }
 .contact_wrap img {
 	height: 15px;
