--- a/text1.html
+++ b/text1.html
@@ -64,7 +64,7 @@ body {
 	font-weight: bold;
 	text-align: center;
 	padding-bottom: 15px;
-	color: #2e6f90;
+	color: #7d4061;
 }
 .content_wrap h1 img {
 	height: 40px;
@@ -91,7 +91,7 @@ body {
 	background-color: #9bddbe;
 }
 .contact_wrap a.bg3 {
-	background-color: #b3d4e6;
+	background-color: #d7a9cd;
 }
 .contact_wrap img {
 	height: 15px;
