--- a/text1.html
+++ b/text1.html
@@ -91,7 +91,7 @@ body {
 	background-color: #9bddbe;
 }
 .contact_wrap a.bg3 {
-	background-color: #d7a9cd;
+	background-color: #c9b5c5;
 }
 .contact_wrap img {
 	height: 15px;
