--- a/TBinvite.html
+++ b/TBinvite.html
@@ -64,7 +64,7 @@ body {
 	font-weight: bold;
 	text-align: center;
 	padding-bottom: 15px;
-	color: #0a8a8a;
+	color: #297f7f;
 }
 .content_wrap h1 img {
 	height: 40px;
@@ -91,7 +91,7 @@ body {
 	background-color: #9bddbe;
 }
 .contact_wrap a.bg3 {
-	background-color: #88cccc;
+	background-color: #88b9b9;
 }
 .contact_wrap img {
 	height: 15px;
