--- a/text.html
+++ b/text.html
@@ -56,7 +56,7 @@ body {
 	text-align: center;
 	padding-top: 15px;
 	margin: 0 15px;
-	color: #ff9966;
+	color: #f58070;
 	line-height: 20px;
 }
 .content_wrap h1 {
