--- a/text1.html
+++ b/text1.html
@@ -56,7 +56,7 @@ body {
 	text-align: center;
 	padding-top: 5px;
 	margin: 0 15px;
-	color: #ff9966;
+	color: #79c2c9;
 	line-height: 20px;
 }
 .content_wrap h1 {
