--- a/TBinvite.html
+++ b/TBinvite.html
@@ -8,7 +8,7 @@
 <meta property="og:site_name" content="invite" />
 <meta property="og:title" content="성남무에타이협회 대회 초청장" />
 <meta property="og:description" content="2019년 6월 22일 오후 1시 <개회식>, 성수초등학교" />
-<meta property="og:image" content="https://user-images.githubusercontent.com/50893303/58323412-d9589e80-7e5e-11e9-804d-f5325dd4cc62.png />
+//<meta property="og:image" content="https://user-images.githubusercontent.com/50893303/58323412-d9589e80-7e5e-11e9-804d-f5325dd4cc62.png />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="yellyB.github.io" />
 <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.5.9/slick.css"/>
@@ -189,8 +189,8 @@ body {
 			<div id="autoplay" style="display:none;">
 				<!-- //이미지 추가 -->
 				<img src="https://user-images.githubusercontent.com/50893303/58323412-d9589e80-7e5e-11e9-804d-f5325dd4cc62.png" class="img100" />
-				<img src="https://user-images.githubusercontent.com/50893303/58323426-e70e2400-7e5e-11e9-9329-56d711518c95.png" class="img100" />
 				<img src="https://user-images.githubusercontent.com/50893303/58323428-e8d7e780-7e5e-11e9-855b-a74ed1ac698a.png" class="img100" />
+				<img src="https://user-images.githubusercontent.com/50893303/58323426-e70e2400-7e5e-11e9-9329-56d711518c95.png" class="img100" />
 				<img src="https://user-images.githubusercontent.com/50893303/58323430-eb3a4180-7e5e-11e9-90eb-628575ef0b9f.png" class="img100" />
 		</div>
 		</div>
